Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58748

DemoBrowser ignores system proxy

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0
    • 5.8.0
    • WebEngine
    • None
    • Linux / KDE
    • 77ed783f38e68668e6ba0b4cb922b204c168524b

    Description

      Qt 5.8.0 seems to ignore KDE systemsettings proxy settings.

      When invoked in a proxied environment, where DNS does only resolve internal addresses, WebEngine reports the error ERR_NAME_NOT_RESOLVED starting with Qt 5.8 (Linux).
      Proxy configuration had been done via KDE (systemsettings > network > proxy > use proxy auto configuration url)

      This may be reproduced with the "demo browser" example.

      Qt 5.7 version asks for proxy password and after that displays the page of http://qt.io/ .
      Qt 5.8 version just shows error page.

      (After entering a single working proxy in the local settings of demobrowser, it works, but this is not the intended way when needing to use a complex proxy script with different proxies)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            noll Bernd Noll
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes