DemoBrowser: Fix use of system proxy

The example did always set an application proxy, though it
was empty if no proxy was explicitly set in the system. This
however blocked the use of the system settings.

Task-number: QTBUG-58748
Change-Id: I50d9116e491cb7c1ab5b8fc610736d60e0bc9ea8
Reviewed-by: Michael Brüning <michael.bruning@qt.io>